<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.marvel.characters.presentation.utils.ExtensionsKt" />

        <import type="com.marvel.characters.presentation.utils.DataConstants" />

        <variable
            name="isLoading"
            type="boolean" />

        <variable
            name="isConnected"
            type="boolean" />

        <variable
            name="character"
            type="com.marvel.core.characters.domain.Character" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <include
            android:id="@+id/appbarCollapsing"
            layout="@layout/appbar_collapsing"
            app:appbarText="@{character.name}"
            app:imagePath="@{@string/file_and_extension(character.thumbnail.path, character.thumbnail.extension)}" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_gray"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animationView"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:visibility="@{isLoading ? View.VISIBLE : View.GONE}"
                    app:lottie_autoPlay="true"
                    app:lottie_colorFilter="@color/deep_red_two"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/loading" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="blocksDescendants"
                    android:orientation="vertical"
                    android:padding="@dimen/default_padding"
                    android:visibility="@{isConnected ? View.VISIBLE : View.GONE}">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_light"
                        android:lineSpacingExtra="5sp"
                        android:text="@string/last_update"
                        android:textColor="@color/deep_red_two"
                        android:textSize="12sp"
                        android:visibility="@{!isLoading ? View.VISIBLE : View.GONE}" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_light"
                        android:lineSpacingExtra="5sp"
                        android:text="@{ExtensionsKt.toBrazilianDateTimeFormat(character.modified, DataConstants.DATE_PATTERN_SERVER)}"
                        android:textColor="@color/deep_red_two"
                        android:textSize="14sp"
                        tools:text="@tools:sample/date/ddmmyy" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/open_sans"
                        android:lineSpacingExtra="5sp"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:visibility="@{character.description.equals(``) ? View.GONE : View.VISIBLE}"
                        app:renderHtml="@{character.description}"
                        tools:text="@tools:sample/lorem/random" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/open_sans_light"
                        android:lineSpacingExtra="5sp"
                        android:text="@string/comics"
                        android:textColor="@color/deep_red_two"
                        android:textSize="14sp"
                        android:visibility="@{character.comics.size() == 0 ? View.GONE : View.VISIBLE}" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvComics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:clipToPadding="false"
                        android:focusableInTouchMode="false"
                        android:nestedScrollingEnabled="false"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="3"
                        tools:listitem="@layout/item_comic" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/has_no_internet"
                    android:textAlignment="center"
                    android:textColor="@color/deep_red_two"
                    android:textSize="18sp"
                    android:visibility="@{!isConnected ? View.VISIBLE : View.GONE}"
                    tools:visibility="gone" />
            </FrameLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>